<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextColor="?android:attr/textColorPrimaryInverseDisableOnly"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        android:hint="@string/insert_value"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_field_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintWidth_default="spread"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/convertion_result"
        app:layout_constraintEnd_toStartOf="@id/spinner_output"
        app:layout_constraintStart_toEndOf="@id/spinner_input"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:srcCompat="@drawable/arrow_right"
        tools:ignore="ImageContrastCheck" />

    <Spinner
        android:id="@+id/spinner_output"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_input"
        app:layout_constraintWidth_default="spread"
        android:paddingHorizontal="16dp"/>

    <TextView
        android:id="@+id/convertion_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="16dp"
        android:text="@string/convertion_result"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/spinner_input"
        app:layout_constraintTop_toBottomOf="@id/spinner_input" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/round_convertion_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_conversion"
        app:layout_constraintStart_toStartOf="@id/convertion_result"
        app:layout_constraintTop_toBottomOf="@id/convertion_result"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/conver_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/convert_button"
        app:layout_constraintStart_toStartOf="@id/round_convertion_switch"
        app:layout_constraintTop_toBottomOf="@id/round_convertion_switch"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageViewGitHub"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/github_logo_description"
        android:focusable="true"
        android:onClick="redirectToGitHubPage"
        android:padding="32dp"
        android:src="@drawable/website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>